WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
116035
[Qt] Fix a crash under ~PingLoader when the QNAM on the page has been destroyed.
https://bugs.webkit.org/show_bug.cgi?id=116035
Summary
[Qt] Fix a crash under ~PingLoader when the QNAM on the page has been destroyed.
Jocelyn Turcotte
Reported
2013-05-13 08:25:03 PDT
[Qt] Fix a crash under ~PingLoader when the QNAM on the page has been destroyed.
Attachments
Patch
(4.51 KB, patch)
2013-05-13 08:32 PDT
,
Jocelyn Turcotte
no flags
Details
Formatted Diff
Diff
Archive of layout-test-results from webkit-ews-16 for mac-mountainlion-wk2
(1.25 MB, application/zip)
2013-05-13 18:47 PDT
,
Build Bot
no flags
Details
Patch
(6.57 KB, patch)
2013-05-14 05:34 PDT
,
Jocelyn Turcotte
no flags
Details
Formatted Diff
Diff
Patch
(8.09 KB, patch)
2013-05-15 08:31 PDT
,
Jocelyn Turcotte
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Jocelyn Turcotte
Comment 1
2013-05-13 08:32:19 PDT
Created
attachment 201570
[details]
Patch
Build Bot
Comment 2
2013-05-13 18:47:53 PDT
Comment on
attachment 201570
[details]
Patch
Attachment 201570
[details]
did not pass mac-wk2-ews (mac-wk2): Output:
http://webkit-queues.appspot.com/results/466417
New failing tests: editing/unsupported-content/table-delete-003.html editing/unsupported-content/list-type-before.html editing/unsupported-content/table-type-before.html editing/unsupported-content/list-delete-003.html editing/unsupported-content/list-delete-001.html editing/unsupported-content/list-type-after.html editing/unsupported-content/table-delete-002.html editing/unsupported-content/table-type-after.html editing/unsupported-content/table-delete-001.html
Build Bot
Comment 3
2013-05-13 18:47:55 PDT
Created
attachment 201663
[details]
Archive of layout-test-results from webkit-ews-16 for mac-mountainlion-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: webkit-ews-16 Port: mac-mountainlion-wk2 Platform: Mac OS X 10.8.2
WebKit Commit Bot
Comment 4
2013-05-14 01:30:42 PDT
Comment on
attachment 201570
[details]
Patch Clearing flags on attachment: 201570 Committed
r150057
: <
http://trac.webkit.org/changeset/150057
>
WebKit Commit Bot
Comment 5
2013-05-14 01:30:44 PDT
All reviewed patches have been landed. Closing bug.
Jocelyn Turcotte
Comment 6
2013-05-14 05:34:33 PDT
Reopening to attach new patch.
Jocelyn Turcotte
Comment 7
2013-05-14 05:34:37 PDT
Created
attachment 201703
[details]
Patch I was able to reproduce the crash even after the last patch. This one use a better approach and avoids the dangling pointer instead.
Jocelyn Turcotte
Comment 8
2013-05-15 08:31:44 PDT
Created
attachment 201834
[details]
Patch Don't disconnect replyDestroyed in resetConnections and call disconnect(receiver) directly in release instead.
Allan Sandfeld Jensen
Comment 9
2013-05-15 08:36:32 PDT
Comment on
attachment 201834
[details]
Patch LGTM
WebKit Commit Bot
Comment 10
2013-05-15 09:30:42 PDT
Comment on
attachment 201834
[details]
Patch Clearing flags on attachment: 201834 Committed
r150120
: <
http://trac.webkit.org/changeset/150120
>
WebKit Commit Bot
Comment 11
2013-05-15 09:30:44 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug