Source/WebCore/platform/network/qt/QNetworkReplyHandler.cpp
@@ -269,6 +269,9 @@ QNetworkReplyWrapper::QNetworkReplyWrapper(QNetworkReplyHandlerCallQueue* queue,
 {
     Q_ASSERT(m_reply);
 
+    // Allow the QNetworkReply to outlive its parent QNetworkAccessManager in case the later gets destroyed before our ResourceHandle is done with it.
+    m_reply->setParent(0);
+
     // setFinished() must be the first that we connect, so isFinished() is updated when running other slots.
     connect(m_reply, SIGNAL(finished()), this, SLOT(setFinished()));
     connect(m_reply, SIGNAL(finished()), this, SLOT(receiveMetaData()));
@@ -292,7 +295,6 @@ QNetworkReply* QNetworkReplyWrapper::release()
     m_reply = 0;
     m_sniffer = nullptr;
 
-    reply->setParent(0);
     return reply;
 }
 
